Fix wrapping checkbox bug

--- a/frontend/src/stimSurvey3d.css
+++ b/frontend/src/stimSurvey3d.css
@@ -53,6 +53,7 @@ html {
     margin: auto;
     flex-direction: column;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .widthbar {
